Fixed delete button not visible

--- a/frontend/src/app/app.component.less
+++ b/frontend/src/app/app.component.less
@@ -50,7 +50,7 @@
 }
 
 .controls {
-  width: 180px;
+  width: 200px;
   display: flex;
   height: 100%;
   overflow: scroll;
