--- a/frontend/src/styles.less
+++ b/frontend/src/styles.less
@@ -27,6 +27,10 @@ body {
   line-height: 32px;
 }
 
+.mdc-list-item--with-trailing-radio .mdc-list-item__end {
+  margin-left: 0 !important;
+}
+
 .shortcut {
   font-size: 11px;
   font-weight: bold;
